--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Haku</title>
     <script src="libs/moment.min.js"></script>
 </head>
 <body>
