--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="libs/moment.min.js"></script>
 </head>
 <body>
-    <h1>Haku ist heute:</h1>
+    <h1>Haku wurde am 19.03.2022 geboren und ist heute:</h1>
     <div id="ageContent"></div>
     <script>
         var contentDiv = document.getElementById("ageContent");
